# Battleship

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  iwyu.imp  log.txt
documentation/: Doxyfile
documentation/html/: _audio_player_8cpp.html  _audio_player_8h.html  _audio_player_8h_source.html  _battleship_8cpp.html  _battleship_8cpp__incl.map  _battleship_8cpp__incl.md5  _battleship_8h.html  _battleship_8h__dep__incl.map  _battleship_8h__dep__incl.md5  _battleship_8h__incl.map  _battleship_8h__incl.md5  _battleship_8h_source.html  _battleship_exception_8h.html  _battleship_exception_8h__dep__incl.map  _battleship_exception_8h__dep__incl.md5  _battleship_exception_8h__incl.map  _battleship_exception_8h__incl.md5  _battleship_exception_8h_source.html  _call_shot_8cpp.html  _call_shot_8cpp__incl.map  _call_shot_8cpp__incl.md5  _call_shot_8h.html  _call_shot_8h__dep__incl.map  _call_shot_8h__dep__incl.md5  _call_shot_8h__incl.map  _call_shot_8h__incl.md5  _call_shot_8h_source.html  _client_network_manager_8cpp.html  _client_network_manager_8cpp__incl.map  _client_network_manager_8cpp__incl.md5  _client_network_manager_8h.html  _client_network_manager_8h__dep__incl.map  _client_network_manager_8h__dep__incl.md5  _client_network_manager_8h_source.html  _client_request_8cpp.html  _client_request_8cpp__incl.map  _client_request_8cpp__incl.md5  _client_request_8h.html  _client_request_8h__dep__incl.map  _client_request_8h__dep__incl.md5  (+1083 more)
documentation/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  (+77 more)
documentation/latex/: _audio_player_8cpp.tex  _audio_player_8h.tex  _battleship_8cpp.tex  _battleship_8h.tex  _battleship_exception_8h.tex  _call_shot_8cpp.tex  _call_shot_8h.tex  _client_network_manager_8cpp.tex  _client_network_manager_8h.tex  _client_request_8cpp.tex  _client_request_8h.tex  _connection_panel_8cpp.tex  _connection_panel_8h.tex  _coordinate_8h.tex  _emote_event_8cpp.tex  _emote_event_8h.tex  _emote_handler_8cpp.tex  _emote_handler_8h.tex  _emote_panel_8cpp.tex  _emote_panel_8h.tex  _emote_popup_8cpp.tex  _emote_popup_8h.tex  _error_response_8cpp.tex  _error_response_8h.tex  _game_controller_8cpp.tex  _game_controller_8h.tex  _game_event_8cpp.tex  _game_event_8h.tex  _game_instance_8cpp.tex  _game_instance_8h.tex  _game_over_event_8cpp.tex  _game_over_event_8h.tex  _game_state_8cpp.tex  _game_state_8h.tex  _game_window_8cpp.tex  _game_window_8h.tex  _image_panel_8cpp.tex  _image_panel_8h.tex  _input_field_8cpp.tex  _input_field_8h.tex  (+293 more)
src/: CMakeLists.txt
src/client/: AudioPlayer.cpp  AudioPlayer.h  Battleship.cpp  Battleship.h  CMakeLists.txt  ClientNetworkManager.cpp  ClientNetworkManager.h  EmoteHandler.cpp  EmoteHandler.h  GameController.cpp  GameController.h  GameWindow.cpp  GameWindow.h  ResponseListenerThread.cpp  ResponseListenerThread.h  SetupManager.cpp  SetupManager.h  main.cpp
src/client/panels/: ConnectionPanel.cpp  ConnectionPanel.h  MainGamePanel.cpp  MainGamePanel.h  SetupPanel.cpp  SetupPanel.h
src/client/uiElements/: EmotePanel.cpp  EmotePanel.h  EmotePopup.cpp  EmotePopup.h  ImagePanel.cpp  ImagePanel.h  InputField.cpp  InputField.h  PlacementGrid.cpp  PlacementGrid.h  ShipPanel.cpp  ShipPanel.h  ViewGrid.cpp  ViewGrid.h
src/common/: CMakeLists.txt  CallShot.cpp  CallShot.h  ClientRequest.cpp  ClientRequest.h  Coordinate.h  JoinGame.cpp  JoinGame.h  Logger.cpp  Logger.h  PlayAgain.cpp  PlayAgain.h  QuitGame.cpp  QuitGame.h  SendEmote.cpp  SendEmote.h  Ship.cpp  Ship.h  StartGame.cpp  StartGame.h  serialization.h  uuid.cpp  uuid.h
src/common/exceptions/: BattleshipException.h
src/common/game_state/: Coordinate.cpp  Coordinate.h  GameState.cpp  GameState.h  Player.cpp  Player.h  PlayerGrid.cpp  PlayerGrid.h  Ship.cpp  Ship.h  game_state.cpp  game_state.h  player.cpp  player.h
src/common/game_state/player/: player.h
src/common/network/requests/: CallShot.cpp  CallShot.h  ClientRequest.cpp  ClientRequest.h  JoinGame.cpp  JoinGame.h  PlayAgain.cpp  PlayAgain.h  QuitGame.cpp  QuitGame.h  SendEmote.cpp  SendEmote.h  StartGame.cpp  StartGame.h  call_shot_request.cpp  call_shot_request.h  join_game_request.cpp  join_game_request.h  send_emote_request.cpp  send_emote_request.h  state_game_request.cpp  state_game_request.h
src/common/network/responses/: EmoteEvent.cpp  EmoteEvent.h  ErrorResponse.cpp  ErrorResponse.h  GameEvent.cpp  GameEvent.h  GameOverEvent.cpp  GameOverEvent.h  JoinGameSuccess.cpp  JoinGameSuccess.h  QuitGameEvent.cpp  QuitGameEvent.h  RequestResponse.cpp  RequestResponse.h  ServerResponse.cpp  ServerResponse.h  StartGameSuccess.cpp  StartGameSuccess.h  request_response.cpp  request_response.h  server_response.cpp  server_response.h
src/common/serialization/: json_utils.h  serialization.h
src/server/: CMakeLists.txt  GameInstance.cpp  GameInstance.h  RequestHandler.cpp  RequestHandler.h  ServerNetworkManager.cpp  ServerNetworkManager.h  game_instance.cpp  game_instance.h  main.cpp  player_manager.cpp  player_manager.h  request_handler.cpp  request_handler.h  server_network_manager.cpp  server_network_manager.h
test/: CMakeLists.txt  common.cpp  sample.cpp
